# ocam-glob

./: dune-project  glob.opam
src/: dune  glob.ml  glob.mli
test/: dune  test_glob.t
